# python-file-search-tool

./: CURRICULUM.md  STUDY.md  pyproject.toml
.claude/: settings.local.json
src/file_search/: exceptions.py
src/file_search/cli/: __init__.py  app.py  file.py  search.py  store.py
src/file_search/core/: client.py
src/file_search/models/: schemas.py
