[project]
name = "file-search"
version = "0.1.0"
description = "Gemini File Search CLI Tool"
readme = "README.md"
authors = [
    { name = "kopher", email = "kopher1601@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
fsearch = "file_search.cli.app:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
