[project]
name = "file-search"
version = "0.1.0"
description = "Gemini File Search CLI Tool"
readme = "README.md"
authors = [
    { name = "kopher", email = "kopher1601@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.62.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "typer>=0.21.1",
]

[project.scripts]
fsearch = "file_search.cli.app:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
